examples/publish-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    k8s-app: bob
  name: ws-test
  namespace: bob
spec:
  ports:
  - name: wstest
    nodePort: 31941
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: bob-core
  sessionAffinity: None
  type: NodePort
